* Lesson - Shapes in Space for #3.

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -71,7 +71,7 @@
 
 <h2 id="classroom-setup-&amp;-equipment">Classroom Setup &amp; Equipment</h2>
 
-<p>It is assumed that Space Battle will be run in a lab based setting with <em>each student having access to their own machine</em> running a Java 8 version of the <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">JDK</a>. See <a href="../client/index.html">Client Setup</a> for more information about the client configuration required.</p>
+<p>It is assumed that Space Battle will be run in a lab based setting with <em>each student having access to their own machine</em> running a Java 8 version of the <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">JDK</a>. See <a href="../client/index.html">Client Setup</a> for more information about the client configuration required - though <strong>it is suggested</strong> to have students link to the jar on a shared network resource, so pushing updates to students when updating the server is automatic just by refreshing the jar.</p>
 
 <p>A teacher machine should be able to present and <em>project</em> to the front of the classroom so that all students can see the <a href="../server/index.html">server</a>&#39;s simulation of space.  This machine needs to be a Windows machine to run the server executable right now, unless you run from the Python source.</p>
 
@@ -95,7 +95,7 @@
 </tr>
 <tr>
 <td>5 -  8</td>
-<td>Shapes in Space</td>
+<td><a href="shapes.html">Shapes in Space</a></td>
 </tr>
 <tr>
 <td>9 - 12</td>
@@ -129,13 +129,11 @@
 
 <h2 id="shapes-in-space-[days-5---8]"><a name="shapesinspace"></a>Shapes in Space [Days 5 - 8]</h2>
 
-<p>It turns out drawing turtle graphics in space is a lot harder than you would think.  The next exercise teaches students a familiar concept in a whole new way.  SBA has ‘Laser Nodes’ which are non-tangible entities which project laser lines in space.  They work in pairs, thus dropping one Laser Node does nothing until another one is dropped.  Once a pair has been dropped, they will perpetually display a laser line of the ship’s color in space indefinitely. </p>
+<p><a href="shapes.html">Full Plan</a></p>
 
-<p>Using this new command, students can draw shapes in space.  You can walk through drawing a square as an example. </p>
+<p>It turns out drawing turtle graphics in space is a lot harder than you would think.  The next exercise teaches students a familiar concept in a whole new way.  Space Battle provides a way to draw shapes on the screen.</p>
 
-<p>On their own students should work on creating a 5-pointed star. </p>
-
-<p>For the next few days, as an assignment, the students should also work on creating a Spiral (inwards or outwards, doesn’t have to be perfectly smooth) and an ‘OctoSquare’.  We define an ‘OctoSquare’ as an octagon circumscribed around a square.  However, the square should not touch the octagon. </p>
+<p>This lesson works towards students getting more comfortable with maneuvering their ship by incrementally learning to draw different shapes such as rectangles, stars, spirals, and an octagon circumscribed around a square.</p>
 
 <h2 id="intro-to-radar-[days-9---12]"><a name="radar"></a>Intro to Radar [Days 9 - 12]</h2>
 
