--- a/server/config.html
+++ b/server/config.html
@@ -220,7 +220,7 @@ etc...
 
 <h3 id="pull_max-=-integer">pull_max = integer</h3>
 
-<p>These two values correspond to the amount of pull the gravity will have on ships.  Larger values mean ships will get pulled in quicker and will have a harder time escaping.  A random value will be generated between <strong>pull_min</strong> and <strong>pull_max</strong>.  These are typically <strong>8</strong> and <strong>24</strong>.</p>
+<p>These two values correspond to the amount of pull the gravity will have on ships.  Larger values mean ships will get pulled in quicker and will have a harder time escaping.  A random value will be generated between <strong>pull_min</strong> and <strong>pull_max</strong>.  These are typically <strong>8</strong> and <strong>24</strong>.  Setting pull to zero, will turn off gravity.</p>
 
 <h2 id="[blackhole]"><a name="blackhole"></a>[BlackHole]</h2>
 
@@ -247,7 +247,7 @@ etc...
 
 <h3 id="pull_max-=-integer">pull_max = integer</h3>
 
-<p>These two values correspond to the amount of pull the drag will have on ships.  Larger values mean ships will slow down faster.  It&#39;d best not to make these values higher than the Ship&#39;s Thruster force of 3500.  A random value will be generated between <strong>pull_min</strong> and <strong>pull_max</strong>.  These are typically <strong>1750</strong> and <strong>2500</strong>.</p>
+<p>These two values correspond to the amount of pull the drag will have on ships.  Larger values mean ships will slow down faster.  It&#39;d best not to make these values higher than the Ship&#39;s Thruster force of 3500.  A random value will be generated between <strong>pull_min</strong> and <strong>pull_max</strong>.  These are typically <strong>1750</strong> and <strong>2500</strong>.  Setting pull to zero, will turn off drag.</p>
 
 <h2 id="[game]"><a name="game"></a>[Game]</h2>
 
