Update website for Radar Lesson Plan for #3.

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -100,7 +100,7 @@
 </tr>
 <tr>
 <td>9 - 12</td>
-<td>Intro to Radar + Minigame</td>
+<td><a href="radar.html">Intro to Radar + Minigame</a></td>
 </tr>
 <tr>
 <td>13 +</td>
@@ -137,6 +137,8 @@
 <p>This lesson works towards students getting more comfortable with maneuvering their ship by incrementally learning to draw different shapes such as rectangles, stars, spirals, and an octagon circumscribed around a square.</p>
 
 <h2 id="intro-to-radar-[days-9---12]"><a name="radar"></a>Intro to Radar [Days 9 - 12]</h2>
+
+<p><a href="radar.html">Full Plan</a></p>
 
 <p>Once players are comfortable maneuvering their ships, they need to understand how to <em>see</em> the world around them and react to it.</p>
 
