--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <li>00 - <a href="lessons/intro.html">Intro and Setup</a></li>
 <li>01 - <a href="lessons/findthemiddle.html">Find the Middle</a></li>
 <li>02 - <a href="lessons/shapes.html">Shapes in Space</a></li>
-<li>03 - Intro to Radar</li>
+<li>03 - <a href="lessons/radar.html">Intro to Radar</a></li>
 <li>04 - Finite State Machines</li>
 <li>05 - Competitions</li>
 </ul></li>
