--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
 <li><a href="client/index.html">Client Setup</a>
 
 <ul>
+<li><a href="client/java_doc/" target="_blank">Java Docs</a></li>
 <li><a href="client/jGRASP/index.html">jGRASP</a></li>
 <li><a href="client/Eclipse/index.html">Eclipse</a></li>
-<li><a href="client/java_doc/" target="_blank">Java Docs</a></li>
+<li><a href="client/BlueJ/index.html">BlueJ</a><br></li>
 </ul></li>
 <li><a href="server/index.html">Server Information</a>
 
