--- a/games/survivor.html
+++ b/games/survivor.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/SpaceBattle.jar" class="btn">Download Client Jar</a>
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
-          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -70,15 +70,17 @@
 
 <p><strong>Survivor</strong> is a basic game which is a great motivator for learning about radar.</p>
 
-<p>The objective is to be the player who has survived the longest in the game world.</p>
+<p>The objective is to be the player who has survived the longest in the game world while moving.</p>
 
-<p>Points are awarded for every second the player has lived in the world.</p>
+<p>Points are awarded for every second the player has travelled in the world.</p>
 
-<p>A player&#39;s best record is used to determine their ranking, so even if your intermediate score is reset upon being destroyed, if you have lived the longest still overall, you&#39;ll win.</p>
+<p>A player&#39;s best record is used to determine their ranking, so even if your intermediate score is reset upon being destroyed, if you have travelled the longest still overall, you&#39;ll win.</p>
 
 <h2 id="configuration"><a name="config"></a>Configuration</h2>
 
-<p>There is no special configuration for survivor.</p>
+<h3 id="minimum_velocity-=-int">minimum_velocity = int</h3>
+
+<p>The minimum speed a ship must be travelling in order to accumulate points.</p>
 
       </section>
     </div>
