--- a/client/Eclipse/index.html
+++ b/client/Eclipse/index.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true" class="btn">Download Client Jar</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/SpaceBattle.jar" class="btn">Download Client Jar</a>
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
-          <a href="https://www.github.com/Mikeware/SpaceBattleArena/blob/master/bin/SBAserver.zip?raw=true" class="btn">Download Server (Windows)</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -86,7 +86,7 @@
 <li><p>Click <strong>Next</strong>.</p></li>
 <li><p>Click on the <strong>Libraries</strong> tab.  </p></li>
 <li><p>Click on <strong>Add External JARs</strong>.</p></li>
-<li><p>Select both the <strong><a href="http://github.com/Mikeware/SpaceBattleArena/blob/master/bin/gson-2.2.jar?raw=true">gson-2.2.jar</a></strong> and <strong><a href="http://github.com/Mikeware/SpaceBattleArena/blob/master/bin/SpaceBattle.jar?raw=true">SpaceBattle.jar</a></strong> which you should have downloaded:</p>
+<li><p>Select both the <strong><a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/gson-2.2.jar">gson-2.2.jar</a></strong> and <strong><a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.0.1/SpaceBattle.jar">SpaceBattle.jar</a></strong> which you should have downloaded:</p>
 
 <p><img src="NewJavaProjectDialog2.png" alt="Libraries Tab"></p></li>
 <li><p>Click <strong>Finish</strong></p></li>
@@ -122,11 +122,6 @@ public class ExampleShip extends BasicSpaceship {
     public ShipCommand getNextCommand(BasicEnvironment env)
     {
         return new IdleCommand(0.1);
-    }
-    
-    @Override
-    public void shipDestroyed()
-    {
     }
 }
 </code></pre>
