Student Guide Book

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 <li><a href="client/Eclipse/index.html">Eclipse</a></li>
 <li><a href="client/BlueJ/index.html">BlueJ</a><br></li>
 </ul></li>
+<li><a href="client/guides/index.html">Guides</a>
+
+<ul>
+<li><a href="client/guides/space.html">Coordinates</a></li>
+<li><a href="client/guides/maneuvering.html">Maneuvering</a></li>
+<li><a href="client/guides/ship.html">Your Ship</a></li>
+<li><a href="client/guides/commands.html">Ship Commands</a></li>
+<li><a href="client/guides/objects.html">Celestial Objects</a></li>
+<li><a href="https://github.com/Mikeware/SpaceBattleArena/tree/master/SBA_Serv/GUI/Graphics/Ships">Ship Image Index</a></li>
+</ul></li>
 <li><a href="server/index.html">Server Information</a>
 
 <ul>
@@ -108,16 +118,6 @@
 <li>03 - <a href="lessons/radar.html">Intro to Radar</a></li>
 <li>04 - Finite State Machines</li>
 <li>05 - Competitions</li>
-</ul></li>
-<li>Guides
-
-<ul>
-<li>Physics</li>
-<li>Objects</li>
-<li>Coding Paradigm</li>
-<li>Your Ship&#39;s &#39;Computer&#39;</li>
-<li>Commands</li>
-<li><a href="https://github.com/Mikeware/SpaceBattleArena/tree/master/SBA_Serv/GUI/Graphics/Ships">Ship Image Index</a></li>
 </ul></li>
 <li><a href="games/index.html">Competitions</a>
 
