Test: Three.js+Angular
Not commiting Image as won't be needed in future.

--- a/client_internal/index.html
+++ b/client_internal/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Space Battle Arena</title>
     <!-- TODO: Include these in package? -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js"></script>-->
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,6 +30,6 @@
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <my-app>Loading...</my-app>
   </body>
 </html>
