Update Student Guide

--- a/client/guides/commands.html
+++ b/client/guides/commands.html
@@ -53,8 +53,11 @@
       <section id="main_content">
         <p>Your spaceship is very advanced.  It can accept many different commands.  However, you may not need them all during your travels.</p>
 
-<p>This reference guide describes the functions and uses of the different commands available.  See the complete manual for their usage and technical specifications <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/index.html?ihs/apcs/spacebattle/commands/package-summary.html">here</a>.</p>
+<p>This reference guide describes the functions and uses of the different commands available.  See the complete manual for their usage and technical specifications <a href="../java_doc/index.html?ihs/apcs/spacebattle/commands/package-summary.html">here</a>.</p>
 
+<p>The commands below will be essential to your ability to navigate space and control your ship:</p>
+
+<blockquote>
 <p><strong>Thrust</strong> will fire the specified engine for the given duration with a percentage of the available thrust power.</p>
 
 <p><strong>Idle</strong> will cause your ship to wait for the given period before updating the environment information and requesting a new command.</p>
@@ -66,6 +69,7 @@
 <p><strong>Steer</strong> will adjust your ships movement direction (but not orientation) by the given amount.</p>
 
 <p><strong>Radar</strong> is used to retrieve information about what&#39;s around your ship in the next callback.</p>
+</blockquote>
 
       </section>
     </div>
