--- a/client/guides/index.html
+++ b/client/guides/index.html
@@ -66,11 +66,11 @@
       <section id="main_content">
         <h1 id="welcome-cadet-to-space-battle-academy!">Welcome Cadet to Space Battle Academy!</h1>
 
-<p>During your time here, you&#39;ll learn about your environment and how your ship behaves.</p>
+<p>During your time here, you&#39;ll learn about your environment and how your ship behaves.  Space is vast and there&#39;s a lot of things which can get you into trouble, but don&#39;t worry everything won&#39;t be thrown at you at once.</p>
 
-<p>The following guides will help you orient yourself within Space and your Spaceship.</p>
+<p>The following guides will help you orient yourself within Space and your Spaceship.  They&#39;ll get you oriented with Space, your Ship, and what you may encounter out there in the great beyond.</p>
 
-<p>Use the navigation links on the right to select your first course.</p>
+<p>Use the navigation links in the right-hand box to select your first lesson.</p>
 
       </section>
     </div>
