--- a/client/guides/objects.html
+++ b/client/guides/objects.html
@@ -53,15 +53,45 @@
       <section id="main_content">
         <p>There are many different types of objects you may encounter during your travels.  Be sure that your ship knows how to react to them.</p>
 
-<p><strong>Asteroids</strong> float through space at a slow speed.  They may be caught in the gravity of other celestial objects.  They can be destroyed with torpedoes.  Colliding with them will cause damage.</p>
+<p><img src="/SpaceBattleArena/img/obj/Asteroid.png" alt="Asteroid" class="left"/> 
+<strong>Asteroids</strong> float through space at a slow speed.  They may be caught in the gravity of other celestial objects.  They can be destroyed with torpedoes.  Colliding with them will cause damage.</p>
 
-<p><strong>Planets</strong> are stationary and have a gravity well.  Colliding with them will cause damage.</p>
+<p><img src="/SpaceBattleArena/img/obj/BlackHole.png" alt="Black Hole" class="left"/> 
+<strong>Black Holes</strong> are stationary and you cannot collide with them.  They have massive gravity wells which can be hard to escape from with thrusters alone.  Staying too long in the center of a black hole can crush your ship.</p>
 
-<p><strong>Black Holes</strong> are stationary and you cannot collide with them.  They have massive gravity wells which can be hard to escape from with thrusters alone.  Staying too long in the center of a black hole can crush your ship.</p>
+<p><img src="/SpaceBattleArena/img/obj/Dragon.png" alt="Dragon" class="left"/> 
+<strong>Dragons</strong> are hungry for ships.  If you are in their site, they will prey upon you.</p>
 
-<p><strong>Nebulas</strong> are stationary and you cannot collide with them.  They will apply a drag to your ship and slow it down.  You can Lower your Energy Scoop to collect energy from them.</p>
+<p><img src="/SpaceBattleArena/img/obj/Nebula.png" alt="Nebula" class="left"/> 
+<strong>Nebulas</strong> are stationary and you cannot collide with them.  They will apply a drag to your ship and slow it down.  You can Lower your Energy Scoop to collect energy from them.</p>
 
-<p><strong>Stars</strong> are stationary and you cannot collide with them.  They are hot and will cause more damage to your ship the closer you are to their center.</p>
+<p><img src="/SpaceBattleArena/img/obj/Planet.png" alt="Planet" class="left"/> 
+<strong>Planets</strong> are stationary and have a gravity well.  Colliding with them will cause damage.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/Mine.png" alt="Space Mine" class="left"/> 
+<strong>Space Mines</strong> are dropped by enemy ships and cause explosions which can damage you and send you off course.  Some may track and follow your ship.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/Star.png" alt="Star" class="left"/> 
+<strong>Stars</strong> are stationary and you cannot collide with them.  They are hot and will cause more damage to your ship the closer you are to their center.  You can Lower your Energy Scoop to collect energy from them.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/Torpedo.png" alt="Torpedo" class="left"/> 
+<strong>Torpedos</strong> are fired by enemy ships and cause damage when hit.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/WormHole.png" alt="Worm Hole" class="left"/> 
+<strong>Worm Holes</strong> are stationary and can transport your ship across space.  Worm Holes may connect to other worm holes, fixed locations in space, or random locations.</p>
+
+<h2 id="game-specific">Game Specific</h2>
+
+<p><img src="/SpaceBattleArena/img/obj/Bauble.png" alt="Bauble" class="left"/> 
+<strong>Baubles</strong> are trinkets of great value to space traders.  They come in various weights and values.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/Bubble.png" alt="Bubble" class="left"/> 
+<strong>Bubbles</strong> are scoring rings.</p>
+
+<p><img src="/SpaceBattleArena/img/obj/Outpost.png" alt="Outpost" class="left"/> 
+<strong>Outposts</strong> are used as a central point for you to scout your missions from, they are usually critical to your task at hand.</p>
+
+<p>Other custom games may add their own objects not listed here.</p>
 
       </section>
     </div>
