--- a/client/guides/space.html
+++ b/client/guides/space.html
@@ -51,11 +51,9 @@
 
     <div class="container">
       <section id="main_content">
-        <p>Space contains many different types of objects to explore.</p>
+        <h1 id="space:-the-final-frontier">Space: The Final Frontier</h1>
 
-<p>In order to navigate your spaceship, you must be familiar with how to navigate within space.</p>
-
-<p>There are a few different values you should be aware of when navigating your ship through space:</p>
+<p>In order to navigate your spaceship, you must be familiar with how to navigate within space.  There are a few different spatial concepts you should be aware of when navigating your ship through space:</p>
 
 <ul>
 <li>Position</li>
@@ -64,9 +62,13 @@
 <li>Speed</li>
 </ul>
 
-<p>Your position determines your location from the top-left of the universe.  That is your x coordinate increases to the right and your y coordinate increases down.</p>
+<p>Your <strong>position</strong> determines your location from the top-left of the universe.  That is your x coordinate increases to the right and your y coordinate increases down.</p>
 
-<p>The direction of your spaceship doesn&#39;t have to match the orientation of it (i.e. you can be moving in one direction and facing to fire or thrust in another direction).  This allows for complex maneuvers and combat.  The angle for these two values will always be in degrees.  </p>
+<p><img src="/SpaceBattleArena/img/coordinates.png" alt="Coordinate System" class="left indent"/> </p>
+
+<p>The <strong>direction</strong> of your spaceship doesn&#39;t have to match the <strong>orientation</strong> of it (i.e. you can be moving in one direction and facing to fire or thrust in another direction).  This allows for complex maneuvers and combat.  The angle for these two values will always be in degrees.  </p>
+
+<p><img src="/SpaceBattleArena/img/directionorientation.png" alt="Direction vs. Orientation" class="left indent"/> </p>
 
 <blockquote>
 <p>0 degrees faces right.  </p>
@@ -74,15 +76,17 @@
 <p>Counter-clockwise movement is positive, clockwise movement is negative.</p>
 </blockquote>
 
-<p>The ship&#39;s speed is always relative to its direction.  It is given in a value per second.  </p>
+<p>The ship&#39;s <strong>speed</strong> is always relative to its direction.  It is given in a value per second.  </p>
 
 <blockquote>
 <p>E.g.  If you&#39;re at position (100,100) and moving in direction 0 (right) at a speed of 10, after 5 seconds (assuming no acceleration or deceleration or other factors), you&#39;d be approximately at position (150, 100).</p>
 </blockquote>
 
-<p>Due to the real-time nature of the system, networking factors, and delays in processing, it will be impossible to know your exact location, react to an exact location, or precisely time maneuvers.  It is best to remember this when planning how to instruct your ship to react to different scenarios and how to plan out complex sets of instructions.</p>
+<p>Due to the real-time nature of the system, networking factors, and delays in processing, it will be impossible to know your exact location, react to an exact location, or precisely time maneuvers.  It is best to remember this when planning how to instruct your ship to react to different scenarios and how to plan out complex sets of instructions.  </p>
 
-<p>The other thing to note that Space has no boundaries.  You can travel infinitely in any direction.  However,  you will &#39;loop&#39; and encounter the same objects if you traverse parallel to an axis.   This is simulated by making Space a <a href="https://en.wikipedia.org/wiki/Torus">torus</a>.  Thus, if you encounter the minimum or maximum boundary of a dimension, you will immediately travel to the other side of that dimension.</p>
+<p>After you are capable of handling basic ship manuevers, if you want to better perfect combatative scenarios, think about anticipating the locations of moving targets.</p>
+
+<p>The other thing to note is that Space has no boundaries.  You can travel infinitely in any direction.  However,  you will &#39;loop&#39; and encounter the same objects if you traverse parallel to an axis.   This is simulated by making Space a <a href="https://en.wikipedia.org/wiki/Torus">torus</a>.  Thus, if you encounter the minimum or maximum boundary of a dimension, you will immediately travel to the other side of that dimension.</p>
 
       </section>
     </div>
