--- a/games/baublehunt.html
+++ b/games/baublehunt.html
@@ -112,7 +112,7 @@ Red Baubles are worth 5 points.</p>
 
 <h3 id="ship_cargo_size-=-int">ship_cargo_size = int</h3>
 
-<p>The maximum number of baubles each ship can carry.</p>
+<p>The maximum weight of baubles each ship can carry.</p>
 
 <h3 id="respawn_bauble_on_collect-=-boolean">respawn_bauble_on_collect = boolean</h3>
 
