--- a/client/guides/maneuvering.html
+++ b/client/guides/maneuvering.html
@@ -51,7 +51,7 @@
 
     <div class="container">
       <section id="main_content">
-        <p>Remember, where we&#39;re going there are no roads...</p>
+        <h1 id="remember,-where-we&#39;re-going-there-are-no-roads...">Remember, where we&#39;re going there are no roads...</h1>
 
 <p>Space is a vast environment which behaves differently than you experience most things here on earth.  It is best to keep this in mind as you instruct your Ship to move about its environment.</p>
 
@@ -63,13 +63,15 @@
 
 <p>Basically, in order to stop you need to apply an equal amount of thrust in the <em>opposite</em> direction that you initially thrusted.  However,  if you thrust in complex combinations (especially after rotating) or if some other entity changes the direction of your travel, it can be difficult to determine exactly how to stop.</p>
 
-<p>For your convenience there are a couple of commands provided which can help you slow or stop your spaceship.</p>
+<p>For your convenience there are a couple of commands provided which can help you slow or stop your spaceship, such as the <a href="../java_doc/ihs/apcs/spacebattle/commands/BrakeCommand.html">BrakeCommand</a>.</p>
 
-<p>The other force in space which has a different effect on travel is gravity.  As you travel in your spaceship, you must remember that it will gravitate towards other celestial objects.  This means your direction of travel will be affected as you pass within sufficient range of these objects.</p>
+<p>The other force in space which has a different effect on travel is gravity.  As you travel in your spaceship, you must remember that it will gravitate towards other celestial objects.  This means your <strong>direction</strong> of travel will be affected as you pass within sufficient range of these objects.</p>
 
 <blockquote>
 <p>Your ship&#39;s movement can also be affected by colliding with other objects like asteroids or other ships.</p>
 </blockquote>
+
+<p>Your <strong>orientation</strong> will only change if you issue a <a href="../java_doc/ihs/apcs/spacebattle/commands/RotateCommand.html">RotateCommand</a>.</p>
 
 <p>Navigating your environment, staying on target, and avoiding and recovering from obstacles will be key in your success on your future missions.</p>
 
