Initial Client Debugger Hack for Ship Position/Rotation
Shows Outline of World Boundaries too
Startup Order: Server, Node.js, Browser, Client
LOTS TODO Still...

--- a/client_internal/app/app.html
+++ b/client_internal/app/app.html
@@ -1,3 +1,4 @@
-<modifier [container]="container"></modifier>
+<!--<modifier [container]="container"></modifier>-->
+<div *ngIf="loading">Please Connect Your Client Ship Now</div>
 <div #container></div>
-<div id="console"></div>
+<div #console></div>
