--- a/client_internal/app/app.html
+++ b/client_internal/app/app.html
@@ -1,4 +1,4 @@
 <!--<modifier [container]="container"></modifier>-->
 <div *ngIf="loading">Please Connect Your Client Ship Now</div>
 <div #container></div>
-<div #console></div>
+<div id="console" #console></div>
