--- a/dev/index.html
+++ b/dev/index.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1125/SpaceBattle.jar" class="btn">Download Client Jar</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SpaceBattle.jar" class="btn">Download Client Jar</a>
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1125/SBAserver.zip" class="btn">Download Server (Windows)</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -72,7 +72,7 @@
 <h2 id="development-tools">Development Tools</h2>
 
 <ul>
-<li>Visual Studio 2013 w/ <a href="http://pytools.codeplex.com/">Python Tools</a></li>
+<li>Visual Studio 2017 Community</li>
 <li><a href="https://eclipse.org/">Eclipse</a> or <a href="http://www.jgrasp.org/">jGRASP</a></li>
 </ul>
 
