--- a/games/discoveryquest.html
+++ b/games/discoveryquest.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1125/SpaceBattle.jar" class="btn">Download Client Jar</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SpaceBattle.jar" class="btn">Download Client Jar</a>
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1125/SBAserver.zip" class="btn">Download Server (Windows)</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -68,17 +68,21 @@
 
 <p><strong>Discovery Quest</strong> is an exploration game where players must navigate space in order to &#39;scan&#39; objects and accumulate points.  They establish a research <strong>Outpost</strong> which can also provide them with specific missions for additional points.</p>
 
-<p>Players must establish an <strong>Outpost</strong> by scanning it before any points will count towards their placement within the game.  Any points earned prior to establishing an Outpost will be banked and awarded when an Outpost is first established. (Multiple players may establish and share the same Outpost.)  An established Outpost&#39;s location can be later retrieved with the <em>getObjectiveLocation()</em> method of the environment&#39;s getGameInfo().</p>
+<p>Players must establish an <strong>Outpost</strong> by scanning it before any points will count towards their placement within the game.  Any points earned prior to establishing an Outpost will be banked and awarded when an Outpost is first established. (Multiple players may establish and share the same Outpost.)  An established Outpost&#39;s location can be later retrieved with the <em>getObjectiveLocation()</em> method of the environment&#39;s getGameInfo().  <em>This can be turned off with configuration such that any objects scanned will receive points.</em></p>
 
 <p><em>Scanning</em> is a specific command that must be used within 150 pixels of an object and must be directed towards a specific object by using its ID number.  Scanning is <strong>not</strong> the same as Radar.  The object being scanned must remain in range for the entire duration of the scan.</p>
 
-<p>A <strong>Mission</strong> dictates which objects a ship should go scan.  If a ship goes and scans ONLY those things, bonus points will be awarded when they return to their outpost and Scan it again.  Scanning your Outpost will always give you a new mission.</p>
+<p>A <strong>Mission</strong> dictates which objects a ship should go scan.  If a ship goes and scans <strong><em>ONLY</em></strong> those things, bonus points will be awarded when they return to their outpost and Scan it again.  Scanning your Outpost will always give you a new mission.  <strong>Note:</strong> the first Outpost you scan becomes your base and is the only Outpost you can receive and complete missions from.  (Other Outposts may still be scanned for points or mission objectives.)</p>
 
 <p>Your Ship being destroyed clears/fails your mission, so you must return to your established Outpost if you want a new one.</p>
 
-<p>Discovery Quest prevents warping out of Nebulas.</p>
+<p><strong>NOTE: Discovery Quest prevents warping out of Nebulas, unless turned off in configuration.</strong></p>
 
 <h2 id="configuration"><a name="config"></a>Configuration</h2>
+
+<h3 id="establish_homebase-=-boolean">establish_homebase = boolean</h3>
+
+<p>Whether or not the player must scan an Outpost first in order to start banking points. When off, all points scanned will count, Outposts can still be scanned for points and bonus missions if missions are enabled (see below).</p>
 
 <h3 id="scan_time-=-float">scan_time = float</h3>
 
@@ -95,6 +99,10 @@
 <h3 id="disable_warp_in_nebula-=-boolean">disable_warp_in_nebula = boolean</h3>
 
 <p>Set to prevent players from Warping out of Nebulas. (true default)</p>
+
+<h3 id="missions-=-boolean">missions = boolean</h3>
+
+<p>Whether or not missions can be obtained from scanning outposts.</p>
 
 <h3 id="mission_objectives-=-string">mission_objectives = string</h3>
 
@@ -147,6 +155,10 @@
 <h3 id="points_ship-=-int">points_ship = int</h3>
 
 <p>Number of points another Ship is worth when successfully scanned. (4 default)</p>
+
+<h3 id="points_spacemine-=-int">points_spacemine = int</h3>
+
+<p>Number of points a Space Mine is worth when successfully scanned. (8 default)</p>
 
       </section>
     </div>
