Update docs to coincide with v1.2.0.1127 Release

--- a/server/config.html
+++ b/server/config.html
@@ -22,9 +22,9 @@
         <h2>A Programming Game in Java for AP CS Students.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SpaceBattle.jar" class="btn">Download Client Jar</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SpaceBattle.jar" class="btn">Download Client Jar</a>
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
-          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1126/SBAserver.zip" class="btn">Download Server (Windows)</a>
+          <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -134,9 +134,9 @@ etc...
 
 <p>This section contains options pertaining to the graphical window created to run the SBA server.  It will affect how SBA is presented to you.</p>
 
-<h3 id="fullscreen-=-boolean">fullscreen = boolean</h3>
+<h3 id="fullscreen-=-boolean-|-string">fullscreen = boolean | string</h3>
 
-<p>Specifies whether or not SBA should run fullscreen or in a window.  <strong>Note</strong>: you should make sure that the horizontal and vertical resolutions match your displays resolution values OR you can set <em>both</em> <strong>horz_res</strong> and <strong>vert_res</strong> to <strong>0</strong> for your display resolution to be <em>automatically</em> detected.</p>
+<p>Specifies whether or not SBA should run fullscreen or in a normal window.  The value &#39;<strong>window</strong>&#39; can also be used to run in a special borderless fullscreen window mode.  <strong>Note</strong>: you should make sure that the horizontal and vertical resolutions match your displays resolution values OR you can set <em>both</em> <strong>horz_res</strong> and <strong>vert_res</strong> to <strong>0</strong> for your display resolution to be <em>automatically</em> detected.</p>
 
 <h3 id="horz_res-=-integer">horz_res = integer</h3>
 
